<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="uw.hcrlab.kubi.SetupActivity">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/startup_username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/startup_username"
            android:labelFor="@+id/startup_username"/>

        <EditText
            android:id="@+id/startup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <TextView
            android:id="@+id/startup_password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/startup_password"
            android:labelFor="@+id/startup_password"/>

        <EditText
            android:id="@+id/startup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/startup_device_name"
            android:labelFor="@+id/startup_device_name"/>

        <EditText
            android:id="@+id/startup_device_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"/>

        <Button
            android:id="@+id/startup_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/startup_button"/>

        <TextView
            android:id="@+id/startup_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="invisible"
            tools:visibility="visible"
            android:gravity="center"
            android:textColor="@color/really_incorrect"
            android:text="@string/startup_error_text"/>

    </LinearLayout>
</FrameLayout>
