<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uw.hcrlab.kubi.SetupActivity">

    <LinearLayout
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/participant_name_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/participant_name"
            android:labelFor="@+id/participant_name"/>

        <Spinner
            android:id="@+id/participant_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/participant_phase_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/participant_phase"
            android:labelFor="@+id/participant_phase"/>

        <Spinner
            android:id="@+id/participant_phase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/participant_submit_btn"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="40dp"
            android:text="@string/participant_button"/>

    </LinearLayout>

    <Button
        android:id="@+id/participant_refresh"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="top|end"
        android:layout_margin="20dp"
        android:background="@drawable/ic_menu_refresh"/>

</FrameLayout>
